@@ -1,5 +1,6 @@
 ﻿# Version 2.0.3
-- Added user profiles
+- Added userdata
+- Added profile command (-profile <@user>)
 - Optimisations
 
 # Version 2.0.2
